Shira/force-app/main/default/objects/MOD__c/fields/DecisionDate__c.field-meta.xml
<CustomField>
    <fullName>DecisionDate__c</fullName>
    <label>תאריך החלטה</label>
    <type>Date</type>
</CustomField>