Shira/force-app/main/default/objects/MOD__c/fields/Field1__c.field-meta.xml
<CustomField>
    <fullName>Field1__c</fullName>
    <label>סטטוס</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>לא התחיל</fullName>
            </value>
            <value>
                <fullName>אושר</fullName>
            </value>
            <value>
                <fullName>נדחה</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>