Shira/force-app/main/default/objects/MOD__c/fields/Model__c.field-meta.xml
<CustomField>
    <fullName>Model__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Model</label>
    <referenceTo>AirPlains__c</referenceTo>
    <relationshipLabel>MODS</relationshipLabel>
    <relationshipName>MODS</relationshipName>
    <type>Lookup</type>
</CustomField>