Shira/force-app/main/default/objects/MOD__c/fields/SystemInMod__c.field-meta.xml
<CustomField>
    <fullName>SystemInMod__c</fullName>
    <label>מערכת</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DW</fullName>
            </value>
            <value>
                <fullName>ST</fullName>
            </value>
            <value>
                <fullName>AC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>